<resources>
    <string name="app_name">Shopping Clever</string>
    <string name="app_description">Descripcion</string>
    <string name="login_text">Iniciar sesion o registrarse</string>
    <string name="mail_hint">Correo</string>
    <string name="password_hint">Contraseña</string>
    <string name="no_register_text">Llevame directo a la accion</string>
    <string name="google_button">Inicia sesion con Google</string>

    <string name="facebook_app_id">1141038416297200</string>
    <string name="fb_login_protocol_scheme">fb1141038416297200</string>

    <string name="title_activity_app">AppActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Cerrar sesion</string>

    <string name="menu_lists">Listas</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="content_description_email">Mail Icon</string>
    <string name="content_description_password">Password Icon</string>

    <string name="dialog_list_title">Nueva lista</string>
    <string name="dialog_list_name_hint">Escribe el título de la lista</string>
    <string name="dialog_list_info_tema">Selecciona el tema de la lista</string>

    <string name="acept">Aceptar</string>
    <string name="cancel">Cancelar</string>
</resources>