<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ScrollView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/textViewNoLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:padding="@dimen/espacio_elementos"
    >

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_description"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/textViewDescription"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                style="@style/MarginElements"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/mail_hint"
                android:ems="10"
                app:startIconDrawable="@drawable/ic_alternate_email"
                app:startIconContentDescription="@string/content_description_email"
                app:layout_constraintTop_toBottomOf="@id/textViewDescription"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/editTextTextEmailAddress">
                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MarginElements"
                android:hint="@string/password_hint"
                android:ems="10"
                app:startIconDrawable="@drawable/ic_keyboard"
                app:startIconContentDescription="@string/content_description_password"
                android:id="@+id/editTextTextPassword"
                app:layout_constraintTop_toBottomOf="@id/editTextTextEmailAddress"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:endIconMode="password_toggle"
                app:counterEnabled="true"
                app:counterMaxLength="20">
                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                    android:text="@string/login_text"
                    android:layout_width="match_parent"
                    style="@style/MarginElements"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonLogin"
                    app:layout_constraintTop_toBottomOf="@id/editTextTextPassword"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

            <com.facebook.login.widget.LoginButton
                    android:id="@+id/fbLoginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    style="@style/MarginElements"
                    app:layout_constraintTop_toBottomOf="@id/buttonLogin"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    />

            <com.google.android.gms.common.SignInButton
                    android:id="@+id/google_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/google_button"
                    style="@style/MarginElements"
                    app:layout_constraintTop_toBottomOf="@id/fbLoginButton"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_register_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/textViewNoLogin"
            android:layout_marginBottom="@dimen/espacio_elementos"
    />

</androidx.constraintlayout.widget.ConstraintLayout>